feat: setup initial communication between different parts of application